Added redis, products cache for frontend and backend

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - 8000:8000
     depends_on:
       - db
+      - redis
+
   db:
     image: postgres
     restart: always
@@ -19,3 +21,8 @@ services:
       - .dbdata1:/var/lib/postgresql
     ports:
       - 54322:5432
+
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
