--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,29 @@
 asgiref==3.5.0
-mysqlclient==2.1.0
-python-dateutil==2.8.2
-pytz==2022.1
-six==1.16.0
-sqlparse==0.4.2
-tzdata==2022.1
+async-timeout==4.0.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
+Deprecated==1.2.13
 Django==4.0.3
 django-cors-headers==3.11.0
 django-mysql==4.5.0
-djangorestframework==3.13.1
 django-redis==5.2.0
+djangorestframework==3.13.1
 Faker==13.3.4
+idna==3.3
+jsonfield==3.1.0
+mixins==0.1.4
+mysqlclient==2.1.0
+packaging==21.3
 psycopg2==2.9.3
 PyJWT==2.3.0
+pyparsing==3.0.8
+python-dateutil==2.8.2
+pytz==2022.1
+redis==4.2.2
+requests==2.27.1
+six==1.16.0
+sqlparse==0.4.2
+stripe==2.74.0
+tzdata==2022.1
+urllib3==1.26.9
+wrapt==1.14.0
