--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
+administrator/__pycache__/urls.cpython-39.pyc
+app/__pycache__/settings.cpython-39.pyc
+app/__pycache__/urls.cpython-39.pyc
+common/__pycache__/urls.cpython-39.pyc
+common/__pycache__/views.cpython-39.pyc
+core/__pycache__/models.cpython-39.pyc
