--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ app/__pycache__/urls.cpython-39.pyc
 common/__pycache__/urls.cpython-39.pyc
 common/__pycache__/views.cpython-39.pyc
 core/__pycache__/models.cpython-39.pyc
+.dbdata/*
+.dbdata1/*
+.dbdata/*
+.dbdata_mysql/*
