--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,32 @@
 asgiref==3.5.0
+astroid==2.11.5
 async-timeout==4.0.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
+colorama==0.4.4
 Deprecated==1.2.13
+dill==0.3.4
 Django==4.0.3
 django-cors-headers==3.11.0
+django-extensions==3.1.5
 django-mysql==4.5.0
 django-redis==5.2.0
 djangorestframework==3.13.1
 Faker==13.3.4
+graphviz==0.20
 idna==3.3
+isort==5.10.1
 jsonfield==3.1.0
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
 mixins==0.1.4
 mysqlclient==2.1.0
 packaging==21.3
+platformdirs==2.5.2
 psycopg2==2.9.3
+pydotplus==2.0.2
 PyJWT==2.3.0
+pylint==2.13.9
 pyparsing==3.0.8
 python-dateutil==2.8.2
 pytz==2022.1
@@ -24,6 +35,8 @@ requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
 stripe==2.74.0
+tomli==2.0.1
+typing_extensions==4.2.0
 tzdata==2022.1
 urllib3==1.26.9
 wrapt==1.14.0
